--- a/style.css
+++ b/style.css
@@ -1,10 +1,18 @@
- body{
+.btn{
+
+background-color: rgb(243, 242, 240);
+
+color: black;
+
+}
+
+.carouselExampleIndicators{
 
 
-   
- }
- 
- 
+width: 100px;
+
+
+}
  
  @media screen and (max-width: 375px) {
     .formulario {
