--- a/style.css
+++ b/style.css
@@ -1,3 +1,50 @@
+
+.grid-layout{
+height: 100%;
+width: 100%;
+  
+   display: grid;
+   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-columns: 100% auto ;
+  grid-template-rows: 10% 20% 60% auto;
+
+  
+
+
+}
+.precios{
+
+ display: flex;
+ justify-content:space-around;
+ width: 100%;
+ height: 400px;
+ background-color: red;
+
+}
+
+.card{
+
+background-color: black;
+color: white;
+border-radius: 3%;
+
+}
+
+
+.c1{
+
+grid-row: 1 /span 4;
+
+}
+
+
+.c6{
+display: flex;
+  justify-content: center;
+
+
+}
+
 .btn{
 
 background-color: rgb(243, 242, 240);
@@ -14,45 +61,7 @@ width: 100px;
 
 }
  
- @media screen and (max-width: 375px) {
-    .formulario {
-
-       display: none;
-
-    }
-
-    .img,
-    .img-2 {
-
-       display: none;
-
-    }
-
-
-    .ir-nintento {
-
-      display: flex; justify-content: center;
-
-
-    }
-
-    .imagen-de-nintento {
-
-       width: 82%;
-       position: relative;
-       left: 10%;
-
-    }
-
-    .nav-1 { display: none;}
-    .nav-2 { display: none;}
-    .nav-3 { display: none;}
-    .nav-4 { display: none;}
-
-    nav {display: flex; justify-content: center;}
- }
-
-      
+  
 
  nav {
      background: linear-gradient(rgb(219, 5, 5), red);
@@ -147,13 +156,7 @@ width: 100px;
 
  }
 
- .nombre-text{
-
-    position: relative;
-    left: 460px;
-
-
- }
+ 
 
  .boton{
 
@@ -166,9 +169,9 @@ width: 100px;
 
 
  .productos{
-
-    position: relative;
-    left: 470px;
+    display: flex;
+    justify-content: space-between;
+    
 
 
 
